--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,4 +1,8 @@
 {{ define "main" }}
+  {{ if .Site.Params.is_debug }}
+    <pre>File = layouts/_default/list.html</pre>
+    <pre>Debug .Kind = {{ debug.Dump .Kind }}</pre>
+  {{ end }}
   {{ partial "title.html" . }}
   <section class="galleries">
     {{ range where .Pages "Params.private" "ne" true }}
