--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -2,13 +2,13 @@
 :root {
 	/* --hover-color: {{ .Site.Params.colors.hover }}; */
 	--hover-color: #fe9234;
---hover-color-soft: #a0612a;
+	--hover-color-soft: #a0612a;
 	--profile-scale: 1.1;
---articles-side-margin: 20px;
+	--articles-side-margin: 20px;
 
 	--separator-color-light: #000000b4;
 	--separator-color-dark: #f0f0f062;
---separator-color-soft-light: #8f8e8e6e;
+	--separator-color-soft-light: #8f8e8e6e;
 	--separator-color-soft-dark: #8d8d8d41;
 	--separator-color: var(--separator-color-light);
 	--separator-color-soft: var(--separator-color-soft-light);
@@ -21,6 +21,61 @@
 		--separator-color-soft: var(--separator-color-soft-dark);
 	  }
 }
+// @media (prefers-color-scheme: light) {
+// 	:root {
+// 		--separator-color: var(--separator-color-light)
+// 	  }
+// }
+
+// hgroup.articles-content > p:first-child {
+// Indentation for the first paragraph in the article
+hgroup.articles-content > p:first-of-type {
+// hgroup.articles-content p {
+	// text-indent: 20px; /* Adjust the indentation as needed */
+	text-indent: 30px; /* Adjust the indentation as needed */
+}
+hgroup.articles-content{
+	// -webkit-box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
+	// -moz-box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
+	// box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
+	
+	
+	// -webkit-box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
+	// -moz-box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
+	// box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
+	
+	// -webkit-box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.3);
+	// -moz-box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.3);
+	// box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.3);
+	position: relative;
+	// padding-left: var(--articles-side-margin);
+	// padding-right: var(--articles-side-margin);
+	// padding-top: calc(var(--articles-side-margin)/2);
+
+	// border-top: 10px solid var(--hover-color);
+}
+// hgroup.articles-content::before{
+// 	content: '';
+// 	position: absolute;
+// 	top: 0;
+// 	left: 0;
+// 	width: 5px;
+// 	height: 100%;
+// 	background: linear-gradient(to bottom, var(--hover-color), transparent);
+// }
+// hgroup.articles-content::after{
+// 	content: '';
+// 	position: absolute;
+// 	top: 0;
+// 	right: 0;
+// 	width: 5px;
+// 	height: 100%;
+// 	background: linear-gradient(to bottom, var(--hover-color), transparent);
+// }
+
+
+hgroup.articles-content p.centered-text{
+	text-align: center;
 }
 
 /*#region fixed header and menu*/
@@ -83,20 +138,20 @@
 
 
 
-	hr.full-separator{
-		position: absolute;
-		width: auto;
-		left: 2.5%; /* Adjusted from left: 0 to center */
-		right: 2.5%; /* Adjusted from right: 0 to center */
+hr.full-separator{
+	// position: absolute;
+	width: auto;
+	left: 2.5%; /* Adjusted from left: 0 to center */
+	right: 2.5%; /* Adjusted from right: 0 to center */
 
-		border-bottom: 1px solid rgba(0,0,0,.08);
-		margin: 2.5em 0;
+	border-bottom: 1px solid rgba(0,0,0,.08);
+	margin: 2.5em 0;
 	background: linear-gradient(90deg, transparent 0%, var(--separator-color) 20%, var(--separator-color) 50%, var(--separator-color) 80%, transparent 100%);
 	// --gradient-color: var(--separator-color);
 	// background: linear-gradient(90deg, transparent 0%, var(--gradient-color) 20%, var(--gradient-color) 50%, var(--gradient-color) 80%, transparent 100%);
-		height: 1px;
-		border: 0;
-	}
+	height: 1px;
+	border: 0;
+}
 
 
 .selected-breadcrumb {
@@ -128,10 +183,19 @@ blockquote {
 	padding-left: 10px;
 }
 
+
+// #articles-pfp{
+
+// 	border-radius: 50%;
+// }
+
 #szk_pfp {
 	/* height: 100px; */
 	// height: 30vh;
 	height: 30vh;
+	// height: 30%;
+	// width: auto;
+	// aspect-ratio: 1/1;
 	/* height: 130vh; */
 	border-radius: 50%;
 	// padding-left: 100px;
@@ -170,7 +234,7 @@ nav.categories ul li a{
 		color: var(--hover-color);
 		border: 2px solid var(--hover-color);
 		// font-weight: bold;
-		text-decoration: underline;
+		// text-decoration: underline;
 	}
 }
 
@@ -234,21 +298,167 @@ nav.categories ul li a{
 
 
 /*#region hgroup.articles-content*/
+.article-and-navbar{
+	// height: auto;
+	display: flex;
+}
+
+.article-and-navbar h1{
+	font-size: 2em;
+}
+
+.article-and-navbar h2{
+	font-size: 1.5em;
+}
+
+.article-and-navbar h3{
+	font-size: 1.17em;
+}
+
+// .articles-content{
+// 	float: left;
+// }
+
+.article-tag{
+	border-radius: 999999px;
+	padding-left: 10px;
+	padding-right: 10px;
+	// border: 2px solid var(--border);
+	// margin: 10px 10px 10px 10px;
+	margin-top: 5px;
+	text-wrap: nowrap;
+	// text-wrap: pretty;
+	// &:hover{
+	// 	color: pink;
+	// }
+
+	display: inline-block; /* Ensures proper spacing */
+    // margin: 5px 8px; /* Adjust spacing between tags */
+    // padding: 4px 10px; /* Adds some space inside the tag */
+    // border-radius: 4px; /* Optional: Rounds corners */
+    // background-color: #f3f3f3; /* Optional: Light background */
+
+	border: 2px solid var(--border);
+	&:hover {
+		color: var(--hover-color);
+		border: 2px solid var(--hover-color);
+		// font-weight: bold;
+		// text-decoration: underline;
+		cursor: pointer;
+	}
+}
+
+
 
 .articles-index{
 	color: var(--text-2);
-	font-size: .8rem;
+	width: 250px;
+	height: 100vh; /* Full height */
+	// position: fixed; /* Stays in place while scrolling */
+	position: sticky;
+	top: 15px;
+	// top: 190px;
+	left: 0;
+	// background: #4e4e4e;
+	padding: 20px;
+	// border-right: 2px solid #ddd;
+	overflow-y: auto; /* Scroll if content overflows */
+	// display: none;
 
-	border: 2px solid #ff6550;
-	border-radius: 10px;
-	// margin-left: 10px;
-	width: 90%;
-	margin: auto; //centers the block
-	margin-bottom: 10px;
+	// box shadow
+	// -webkit-box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
+	// -moz-box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
+	// box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
 }
 
+.articles-right-bar{
+	color: var(--text-2);
+
+	width: 250px;
+	height: 100vh; /* Full height */
+	// position: fixed; /* Stays in place while scrolling */
+	// position: sticky;
+	top: 45px;
+	left: 0;
+	// background: #4e4e4e;
+	padding: 20px;
+	// border-right: 2px solid #ddd;
+	// overflow-y: auto; /* Scroll if content overflows */
+	// display: none;
+}
+
+.articles-right-bar hr{
+	// position: absolute;
+	width: auto;
+	left: 2.5%; /* Adjusted from left: 0 to center */
+	right: 2.5%; /* Adjusted from right: 0 to center */
+	
+	// border-bottom: 1px solid rgba(0,0,0,.08);
+	// margin: 2.5em 0;
+	margin: 13px 0px;
+	// background: linear-gradient(90deg, transparent 0%, var(--separator-color) 20%, var(--separator-color) 50%, var(--separator-color) 80%, transparent 100%);
+	// background: var(--separator-color);
+	background: var(--separator-color-soft);
+	// background: pink;
+	// --gradient-color: var(--separator-color);
+	// background: linear-gradient(90deg, transparent 0%, var(--gradient-color) 20%, var(--gradient-color) 50%, var(--gradient-color) 80%, transparent 100%);
+	height: 1px;
+	border: 0;
+}
+
+.articles-right-bar .article-tags{
+	text-align: center;
+}
+
+.articles-right-bar p{
+	text-decoration: dotted;
+	font-style: italic;
+	text-align: center;
+}
+
+.articles-right-bar .social-icons{
+	// display: flex;
+	// padding: 10px 10px;
+	// padding: 0px 0px;
+	// color:pink;
+	// gap: 3px;
+	gap: .3rem;
+	padding-left: .1rem;
+	padding-right: .1rem;
+}
+
+.articles-right-bar img{
+	border-radius: 9px;
+}
+
+h3.uppercase{
+	font-weight: 900;
+	font-size: .9rem;
+	text-transform: uppercase;
+}
+// .articles-index{
+// 	float: left;
+// 	// width: 300px;
+// 	// height: 100%;
+// 	position: sticky;
+// 	// // position: absolute;
+// 	// left: 0px;
+
+// 	color: var(--text-2);
+// 	font-size: .8rem;
+
+// 	border: 2px solid #ff6550;
+// 	border-radius: 10px;
+// 	// margin-left: 10px;
+// 	// width: 90%;
+// 	margin: auto; //centers the block
+// 	margin-bottom: 10px;
+// }
+
 .articles-index a:hover{
-	color: pink;
+	// color: pink;
+	color: var(--hover-color);
+	// border-left: 10px double #ff6550;
 }
 
 .articles-index ol{
@@ -257,10 +467,26 @@ nav.categories ul li a{
 	// padding-inline-start: 2%;
 	padding-inline-start: 15px;
 }
+.articles-index ol li::before{
+	content: '';
+	padding-left: 5px;
+	// border-left: 10px double #ff6550;
+	border-left: 5px solid var(--hover-color-soft);
+}
+.articles-index ol li:hover::before{
+	content: '';
+	padding-left: 5px;
+	// border-left: 10px double #ff6550;
+	border-left: 5px solid var(--hover-color);
+}
 .articles-index ol li{
+	list-style-type: none;
 	// tab-size: 4;
 	// margin: 0px;
 	// list-style-position: inside;
+	// border-left: #fe9234;
+	// border: 1px 2;
+	// border-left: 10px double #ff6550;
 }
 
 // .articles-index li {
@@ -274,6 +500,7 @@ nav.categories ul li a{
 // 	// position: absolute;
 // 	// left: -5px;
 //   }
+
 
 // hgroup.articles-content
 // hgroup.articles-content p, ul{
