--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
   {{ if .Site.Params.is_debug }}
     <pre>File = layouts/_default/list.html</pre>
+    <pre>Path = {{.Path}}</pre>
     <pre>Debug .Kind = {{ debug.Dump .Kind }}</pre>
   {{ end }}
   {{ partial "title.html" . }}
