--- a/layouts/articles/single.html
+++ b/layouts/articles/single.html
@@ -38,4 +38,12 @@
   {{ end }}
 
     {{ partial "related-articles.html" . }}
+
+    {{/*  TAGS  */}}
+    <div id="tags-footer">
+    <hr class="solid-separator">
+    <h3 class="uppercase">ALL TAGS</h3> 
+    {{/*  <div class="article-tags">  */}}
+      {{ partial "all-tags.html" $context }}
+    </div>
 {{ end }}
