--- a/layouts/partials/articles-right-bar.html
+++ b/layouts/partials/articles-right-bar.html
@@ -36,16 +36,7 @@
 			{{/*  <a class="article-tag">{{.}}</a>  */}}
 		{{/*  {{ end }}  */}}
 
-		{{range $name, $taxonomy := .Site.Taxonomies.tags}} 
-			{{ $cnt := .Count }}
-			{{ with $.Site.GetPage (printf "/tags/%s" $name) }}
-				{{/*  <div class="tagbutton">  */}}
-				{{/*  <a class="article-tag" href={{ .RelPermalink }} title="All pages with tag <i>{{$name}}</i>">{{$name}}</a>  */}}
-				{{/*  <sup>{{$cnt}}</sup>  */}}
-				<a class="article-tag" href={{ .RelPermalink }} title="All pages with tag <i>{{$name}}</i>">{{$name}}<sup>{{$cnt}}</sup></a>
-				{{/*  </div>  */}}
-			{{end}}
-		{{end}}
+		{{ partial "all-tags.html" . }}
 
 	</div>
 
