responsive tags/right bar

--- a/layouts/partials/articles-title.html
+++ b/layouts/partials/articles-title.html
@@ -6,7 +6,8 @@
     {{/*  {{ with .Params.Description }}
       <p>{{ . | markdownify }}</p>
     {{ end }}  */}}
-    <p class="centered-text">
+    <p class="centered-text"> <a id="articles-author" href="{{ .Site.BaseURL }}about">{{ .Site.Params.articles_author }}, </a>
+    {{/*  <p class="centered-text"> <a id="articles-author" href="{{ relref . 'about' }}">{{ .Site.Params.articles_author }}, </a>  */}}
     <time datetime="{{ .Date }}" class="centered-text">🕒{{ .Date | time.Format ":date_medium" }}</time>
     &nbsp;&nbsp;&nbsp;&nbsp;
     <time datetime="PT{{.ReadingTime}}M">⌛{{ .ReadingTime }} {{ if gt .ReadingTime 1}} mins. {{else}} min. {{end}}</time>
