--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -371,6 +371,43 @@ nav.categories ul li a{
 	// box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
 }
 
+#tags-footer{
+	display: none;
+	margin-left: 20px;
+}
+
+@media (max-width: 650px) {
+	.articles-index{
+		display: none;
+	}
+}
+@media (min-width: 850px) {
+	#articles-author{
+		display: none;
+	}
+}
+@media (max-width: 850px) {
+	.articles-right-bar{
+		// visibility: hidden;
+		display: none;
+	}
+
+	#tags-footer{
+		display: block;
+	}
+
+	#articles-author{
+		display: inline-block;
+		font-style: italic;
+	
+		&:hover{
+			color: var(--hover-color);
+		}
+	}
+}
+
+
+
 .articles-right-bar{
 	color: var(--text-2);
 
@@ -385,6 +422,25 @@ nav.categories ul li a{
 	// border-right: 2px solid #ddd;
 	// overflow-y: auto; /* Scroll if content overflows */
 	// display: none;
+}
+
+hr.solid-separator{
+	// position: absolute;
+	width: auto;
+	left: 2.5%; /* Adjusted from left: 0 to center */
+	right: 2.5%; /* Adjusted from right: 0 to center */
+	
+	// border-bottom: 1px solid rgba(0,0,0,.08);
+	// margin: 2.5em 0;
+	margin: 13px 0px;
+	// background: linear-gradient(90deg, transparent 0%, var(--separator-color) 20%, var(--separator-color) 50%, var(--separator-color) 80%, transparent 100%);
+	// background: var(--separator-color);
+	background: var(--separator-color-soft);
+	// background: pink;
+	// --gradient-color: var(--separator-color);
+	// background: linear-gradient(90deg, transparent 0%, var(--gradient-color) 20%, var(--gradient-color) 50%, var(--gradient-color) 80%, transparent 100%);
+	height: 1px;
+	border: 0;
 }
 
 .articles-right-bar hr{
