article options: show_table_of_contents and show_right_bar

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -399,10 +399,17 @@ nav.categories ul li a{
 	#articles-author{
 		display: inline-block;
 		font-style: italic;
-	
+		
 		&:hover{
 			color: var(--hover-color);
 		}
+	}
+}
+
+a#author{
+	font-style: italic;
+	&:hover{
+		color: var(--hover-color);
 	}
 }
 
