--- a/layouts/articles/list.html
+++ b/layouts/articles/list.html
@@ -1,6 +1,8 @@
 {{ define "main" }}
-  <h1>ARTICLES (LIST)</h1>
-  <h1>.Section = {{.Section}}</h1>
+  {{ if .Site.Params.is_debug}}
+    <pre>ARTICLES (LIST)</pre>
+    <pre>.Section = {{.Section}}</pre>
+  {{ end }}
   {{ partial "title.html" . }}
   <section class="galleries">
     {{ range where .Pages "Params.private" "ne" true }}
@@ -8,13 +10,13 @@
 
       {{/*  TODO esto debería cambiarlo por un article-card.html o algo así  */}}
       <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-
+      {{/*  <p>{{.Summary}}</p>  */}}
 
 
     {{ end }}
-    <hgroup>
-      {{ .Content | markdownify }}
-      {{/*  {{ .Content }}  */}}
-    </hgroup>
   </section>
+  <hgroup>
+    {{ .Content | markdownify }}
+    {{/*  {{ .Content }}  */}}
+  </hgroup>
 {{ end }}
