tag-cloud with weights

--- a/layouts/partials/articles-right-bar.html
+++ b/layouts/partials/articles-right-bar.html
@@ -36,7 +36,8 @@
 			{{/*  <a class="article-tag">{{.}}</a>  */}}
 		{{/*  {{ end }}  */}}
 
-		{{ partial "all-tags.html" . }}
+		{{/*  {{ partial "all-tags.html" . }}  */}}
+		{{ partial "tag-cloud.html" . }}
 
 	</div>
 
