article-card at related-articles

--- a/layouts/partials/related-articles.html
+++ b/layouts/partials/related-articles.html
@@ -16,7 +16,8 @@
       {{/*  <h1>{{.Title}}</h1>  */}}
 	  <a href="{{.RelPermalink}}">{{.Title}}</a>
 	  {{/*  TODO hacer un article-card.html  */}}
-      {{ partial "album-card.html" . }}
+      {{/*  {{ partial "album-card.html" . }}  */}}
+      {{ partial "article-card.html" . }}
     {{ end }}
   </section>
 {{ end }}
