more debug code

--- a/layouts/partials/debug.html
+++ b/layouts/partials/debug.html
@@ -1,3 +1,8 @@
 {{/*  Partial for debugging  */}}
+<h1>Debug Code</h1>
 <pre>❗ Don't forget to turn 'false' the `is_debug` flag in `hugo.toml` ❗</pre>
 <pre>Languages: {{ .Site.Languages }}</pre>
+<pre>Permalink: {{ .Permalink }}</pre>
+<pre>RelPermalink: {{ .RelPermalink }}</pre>
+<pre>IsTranslated = {{.IsTranslated}}</pre>
+<hr class="full-separator">
