debug active language

--- a/layouts/partials/debug.html
+++ b/layouts/partials/debug.html
@@ -2,6 +2,7 @@
 <h1>Debug Code</h1>
 <pre>❗ Don't forget to turn 'false' the `is_debug` flag in `hugo.toml` ❗</pre>
 <pre>Languages: {{ .Site.Languages }}</pre>
+<pre>🦜.Site.Language.LanguageName = {{.Site.Language.LanguageName}}</pre>
 <pre>Permalink: {{ .Permalink }}</pre>
 <pre>RelPermalink: {{ .RelPermalink }}</pre>
 <pre>IsTranslated = {{.IsTranslated}}</pre>
