--- a/layouts/articles/single.html
+++ b/layouts/articles/single.html
@@ -37,9 +37,9 @@
 
     </div>
 
-  {{ if .Params.show_text_on_top }}
+  {{/*  {{ if .Params.show_text_on_top }}
     {{ partial "gallery.html" . }}
-  {{ end }}
+  {{ end }}  */}}
 
     {{ partial "related-articles.html" . }}
 
