--- a/layouts/partials/related-articles.html
+++ b/layouts/partials/related-articles.html
@@ -14,7 +14,7 @@
   <section class="galleries">
     {{ range . }}
       {{/*  <h1>{{.Title}}</h1>  */}}
-	  <a href="{{.RelPermalink}}">{{.Title}}</a>
+	  {{/*  <a href="{{.RelPermalink}}">{{.Title}}</a>  */}}
 	  {{/*  TODO hacer un article-card.html  */}}
       {{/*  {{ partial "album-card.html" . }}  */}}
       {{ partial "article-card.html" . }}
