--- a/layouts/articles/list.html
+++ b/layouts/articles/list.html
@@ -7,9 +7,10 @@
   <section class="galleries">
     {{ range where .Pages "Params.private" "ne" true }}
       {{/*  {{ partial "album-card.html" . }}  */}}
-
+      
       {{/*  TODO esto debería cambiarlo por un article-card.html o algo así  */}}
-      <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+      {{/*  <a href="{{ .RelPermalink }}">{{ .Title }}</a>  */}}
+      {{ partial "article-card.html" . }}
       {{/*  <p>{{.Summary}}</p>  */}}
 
 
