--- a/layouts/partials/article-card.html
+++ b/layouts/partials/article-card.html
@@ -33,7 +33,7 @@
 {{ end }}
 
 
-<a href="{{.RelPermalink}}" class="card">
+<a href="{{.RelPermalink}}" class="card-article">
   {{/*  {{ if $article_image_url }}  */}}
   {{ if $cover_image }}
     {{/*  <img src="{{.Permalink}}/{{$article_image_url}}" alt="balloon with an emoji face" class="card__img">  */}}
