--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -87,7 +87,8 @@
 //   --blur: 16px;
   --blur: 10px;
   --size: clamp(300px, 50vmin, 600px);
-  width: var(--size);
+//   width: var(--size);
+  width: 100%;
   aspect-ratio: 4 / 3;
   position: relative;
   border-radius: 2rem;
@@ -102,7 +103,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transform: scale(calc(1 + (var(--hover, 0) * 0.25))) rotate(calc(var(--hover, 0) * -5deg));
+//   transform: scale(calc(1 + (var(--hover, 1) * 0.25))) rotate(calc(var(--hover, 0) * -5deg));
+  transform: scale(calc(1 + (var(--hover, 3) * 0.25))) rotate(calc(var(--hover, 0) * -7deg));
   transition: transform 0.2s;
 }
 
