--- a/layouts/tags/list.html
+++ b/layouts/tags/list.html
@@ -10,6 +10,8 @@
   <hgroup>
     <h1 class="accent-color">#{{ .Title }}</h1>
   </hgroup>
+
+  {{/*  section.galleries is displayed as grid  */}}
   <section class="galleries">
     {{/*  <section>  */}}
       {{ if eq .Kind "term"}}
